@@ -745,6 +745,7 @@ dongle    = false
 #    fontpath: The path (directory) where the printer fonts (courier.ttf, ocra.ttf, roman.ttf, sansserif.ttf, script.ttf) are located.
 #    openwith: Start the specified program to open the output file.
 #   openerror: Start the specified program to open the output file if an error had occurred.
+#   printdbcs: If set, DOSBox-X will print Chinese/Japnese/Korean double-byte characters when these code pages are active.
 #   shellhide: If set, the command window will be hidden for openwith/openerror options on the Windows platform.
 #     timeout: (in milliseconds) if nonzero: the time the page will be ejected automatically after when no more data arrives at the printer.
 printer     = true
@@ -758,6 +759,7 @@ docpath     = .
 fontpath    = FONTS
 openwith    = 
 openerror   = 
+printdbcs   = true
 shellhide   = false
 timeout     = 0
 
