@@ -886,6 +886,7 @@ pc-98 show graphics layer on initialize  = true
 #             ttf.char512: If set, DOSBox-X will display the 512-character font if possible (requires a word processor be set) for the TTF output.
 #         ttf.autoboxdraw: If set, DOSBox-X will auto-detect ASCII box-drawing characters for CJK (Chinese/Japanese/Korean) support in the TTF output.
 #                            Only applicable when using a DBCS code page (932: Japanese, 936: Simplified Chinese; 949: Korean; 950: Traditional Chinese)
+#           ttf.printfont: If set, DOSBox-X will force to use the current TrueType font (set via ttf.font) for printing in addition to displaying.
 #              ttf.blinkc: If set to true, the cursor blinks for the TTF output; setting it to false will turn the blinking off.
 #                            You can also change the blinking rate by setting an interger between 1 (fastest) and 7 (slowest), or 0 for no cursor.
 frameskip               = 0
@@ -921,6 +922,7 @@ ttf.underline           = true
 ttf.strikeout           = false
 ttf.char512             = true
 ttf.autoboxdraw         = true
+ttf.printfont           = true
 ttf.blinkc              = true
 
 [vsync]
@@ -1783,6 +1785,7 @@ dongle    = false
 #    fontpath: The path (directory) where the printer fonts (courier.ttf, ocra.ttf, roman.ttf, sansserif.ttf, script.ttf) are located.
 #    openwith: Start the specified program to open the output file.
 #   openerror: Start the specified program to open the output file if an error had occurred.
+#   printdbcs: If set, DOSBox-X will print Chinese/Japnese/Korean double-byte characters when these code pages are active.
 #   shellhide: If set, the command window will be hidden for openwith/openerror options on the Windows platform.
 #     timeout: (in milliseconds) if nonzero: the time the page will be ejected automatically after when no more data arrives at the printer.
 printer     = true
@@ -1796,6 +1799,7 @@ docpath     = .
 fontpath    = FONTS
 openwith    = 
 openerror   = 
+printdbcs   = true
 shellhide   = false
 timeout     = 0
 
