@@ -370,6 +370,9 @@ static const char *def_menu_video_ttf[] =
     "ttf_wpxy",
     "--",
     "ttf_blinkc",
+#if C_PRINTER
+    "ttf_printfont",
+#endif
     "ttf_dbcs_sbcs",
     "ttf_autoboxdraw",
     NULL
